# agentic-memory-support-demo

./: .gitignore  LICENSE  README.md  pyproject.toml  streamlit_app.py
evals/: run_benchmark.py
src/agentic_memory_support_demo/: __init__.py  benchmark.py  chatbot.py  deterministic.py  llm.py
tests/: test_benchmark.py
